Fix(Swagger): update swagger
